<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_screen"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
...

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="sans-serif-medium"
            android:text="Login"
            android:textColor="#6AB187"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="323sp"
            android:layout_height="49sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_rectangle"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:textColor="#6AB187"
            android:textColorHint="#B1B1B1" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="323sp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_rectangle"
            android:drawableEnd="@drawable/password_eye"
            android:drawablePadding="10dp"
...
<!--            android:text="Forgot Password?"-->
<!--            android:textColor="#56C3E6"-->
<!--            android:textSize="14sp" />-->

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="293sp"
            android:layout_height="48sp"
            android:layout_marginTop="40sp"
            style="@style/ButtonStyle.tourGuys"
            android:text="Login"
            android:textColor="@android:color/white"
...
